--- a/bin/src/main/resources/static/index.html
+++ b/bin/src/main/resources/static/index.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h1 align="center">Hello from index</h1>
+<h1 align="center">Spring Data Layer</h1>
 </body>
 </html>
